--- a/bricolage_ui_playground/web/index.html
+++ b/bricolage_ui_playground/web/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--
+
+<head>
+  <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -14,27 +15,29 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="$FLUTTER_BASE_HREF" />
+  <base href="/" />
 
-    <meta charset="UTF-8" />
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
+  <meta charset="UTF-8" />
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+  <meta name="description" content="A new Flutter project." />
 
-    <!-- iOS meta tags & icons -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Bricolage UI" />
-    <link rel="apple-touch-icon" href="icons/Icon-512.png" />
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="Bricolage UI" />
+  <link rel="apple-touch-icon" href="icons/Icon-512.png" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/Icon-16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/Icon-32.png" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/Icon-16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/Icon-32.png" />
+  <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>Bricolage UI</title>
-    <link rel="manifest" href="manifest.json" />
-  </head>
-  <body>
-    <script src="flutter_bootstrap.js" async></script>
-  </body>
+  <title>Bricolage UI</title>
+  <link rel="manifest" href="manifest.json" />
+</head>
+
+<body>
+  <script src="flutter_bootstrap.js" async></script>
+</body>
+
 </html>
